--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,12 +40,12 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      # Linux: Install GTK and WebKit dependencies
+      # Linux: Install GTK and WebKit dependencies (Ubuntu 24.04 uses webkit2gtk-4.1)
       - name: Install Linux dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
 
       - name: Install Wails CLI
         run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
@@ -54,7 +54,12 @@ jobs:
         run: npm ci
         working-directory: frontend
 
-      - name: Build
+      - name: Build (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: wails build -platform ${{ matrix.platform }} -tags webkit2_41
+
+      - name: Build (Windows/macOS)
+        if: matrix.os != 'ubuntu-latest'
         run: wails build -platform ${{ matrix.platform }}
 
       - name: Rename artifact (Windows)
