--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           - os: macos-latest
             platform: darwin/arm64
             artifact_suffix: macos-arm64
-          - os: macos-13
+          - os: macos-15-large
             platform: darwin/amd64
             artifact_suffix: macos-amd64
 
