chore: add dependency groups to dependabot config
Groups:
- go-all: all Go modules together
- vite: vite, @vitejs/*, vitest
- react: react, react-dom, @types/react*
- tailwind: tailwindcss, @tailwindcss/*
- typescript: typescript
- actions: all GitHub Actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,10 @@ updates:
       interval: "weekly"
     commit-message:
       prefix: "chore(deps)"
+    groups:
+      go-all:
+        patterns:
+          - "*"
 
   # npm (Frontend)
   - package-ecosystem: "npm"
@@ -20,6 +24,25 @@ updates:
       interval: "weekly"
     commit-message:
       prefix: "chore(deps)"
+    groups:
+      vite:
+        patterns:
+          - "vite"
+          - "@vitejs/*"
+          - "vitest"
+      react:
+        patterns:
+          - "react"
+          - "react-dom"
+          - "@types/react"
+          - "@types/react-dom"
+      tailwind:
+        patterns:
+          - "tailwindcss"
+          - "@tailwindcss/*"
+      typescript:
+        patterns:
+          - "typescript"
 
   # GitHub Actions
   - package-ecosystem: "github-actions"
@@ -28,3 +51,7 @@ updates:
       interval: "weekly"
     commit-message:
       prefix: "chore(deps)"
+    groups:
+      actions:
+        patterns:
+          - "*"
