--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v5
         with:
-          name: build-${{ matrix.os }}-${{ matrix.platform }}
+          name: build-${{ matrix.os }}
           path: build/bin/QuickLaunch-*
 
   release:
